--- a/SchOOD.Web/SchOOD.Web.csproj
+++ b/SchOOD.Web/SchOOD.Web.csproj
@@ -1,10 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.Security.CAS" Version="2.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.0" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
@@ -12,6 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SchOOD.Core\SchOOD.Core.csproj" />
+    <ProjectReference Include="..\SchOOD.DataBase\SchOOD.DataBase.csproj" />
     <ProjectReference Include="..\SchOOD.Models\SchOOD.Models.csproj" />
   </ItemGroup>
 
